--- a/site/blueprints/pages/blog-article.yml
+++ b/site/blueprints/pages/blog-article.yml
@@ -22,7 +22,8 @@ columns:
         width: 3/3
         fieldsets:
           fullRow: fieldsets/fullRow
-          halfRow: fieldsets/halfRow      
+          halfRow: fieldsets/halfRow
+          fullWidth: fieldsets/FullWidth
       cover:
         type: files
         size: large
@@ -58,9 +59,8 @@ columns:
           description:
             type: textarea
             size: medium
-            buttons: true 
+            buttons: true
       images:
         type: files
         info: "{{ file.dimensions }}"
-        template: blog-article-image          
-      
+        template: blog-article-image
