--- a/site/blueprints/pages/work.yml
+++ b/site/blueprints/pages/work.yml
@@ -97,6 +97,7 @@ columns:
         options:
           small: Small
           medium: Medium
+          large: Large
       galleryLayout:
         type: multiselect
         max: 1
