--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-# Kirby .htaccess
+# MondernAmusements .htaccess
 
 # rewrite rules
 <IfModule mod_rewrite.c>
@@ -40,6 +40,7 @@ RewriteRule ^kirby/(.*) index.php [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*) index.php [L]
+
 
 </IfModule>
 
