--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "require": {
         "php": ">=7.1.0",
         "getkirby/cms": "^3.0",
-        "pedroborges/kirby-meta-tags": "^2.0"
+        "pedroborges/kirby-meta-tags": "^2.0",
+        "schnti/cachebuster": "^1.0",
+        "diverently/laravel-mix-kirby": "^1.4"
     },
     "config": {
         "optimize-autoloader": true
